tests/NormalTests/paczka1/fuzzy1/58499686.err
Error in line 3: gbjFShTYr A167 93,5
Error in line 19: gbjFShTYr S132 22,96
Error in line 16: gbjFShTYr S226 69,5
Error in line 21: zce S226 8,09
Error in line 24: S132 S132 27,6
Error in line 23: zce S226 62,2
Error in line 33: 6bWOputF A167 20,5
